--- a/default-fstab.yaml
+++ b/default-fstab.yaml
@@ -1,6 +1,6 @@
 mountpoints:
   /:
-    url: https://content.da.live/{org}/{site}/
+    url: https://drive.google.com/drive/u/0/folders/1G6ZbXVuW5oi85L4C0Q6p_Pgl0HoviaCr
     type: markup
 
 folders:
